[project]
name = "ytttdlbot"
version = "0.1.0"
description = "Telegram bot that downloads videos and audio from tiktok, youtube shorts, etc."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
authors = ["namnam1105"]
license-files = ["LICENSE"]
dependencies = [
    "aiogram>=3.26.0",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
]
